--- a/static/index.html
+++ b/static/index.html
@@ -106,27 +106,29 @@
                     </td>
                 </tr>
             </table>
-            <table class="result-table" id="result-table">
-                <tr>
-                    <th>X</th>
-                    <th>Y</th>
-                    <th>R</th>
-                    <th>Попал?</th>
-                    <th>Дата</th>
-                    <th>Время</th>
-                </tr>
-            </table>
-            <table class="pagination-table">
-                <tr>
-                    <td>
-                        <input type="button" id="prev-btn" class="pagination-btn" value="Предыдущая">
-                        <input type="button" id="next-btn" class="pagination-btn" value="Следующая">
-                        <input type="button" id="clear-btn" class="pagination-btn" value="Очистить">
-                    </td>
-                </tr>
-            </table>
-        </td>
+    <tr>
+        <table class="result-table" id="result-table">
+            <tr>
+                <th>X</th>
+                <th>Y</th>
+                <th>R</th>
+                <th>Попал?</th>
+                <th>Дата</th>
+                <th>Время</th>
+            </tr>
+            <tbody id="result-tbody">
+            </tbody>
+        </table>
     </tr>
+    <table class="pagination-table">
+        <tr>
+            <td>
+                <input type="button" id="prev-btn" class="pagination-btn disabled" value="Предыдущая" disabled>
+                <input type="button" id="next-btn" class="pagination-btn disabled" value="Следующая" disabled>
+                <input type="button" id="clear-btn" class="pagination-btn disabled" value="Очистить" disabled>
+            </td>
+        </tr>
+    </table>
     <tr>
         <td colspan="2"></td>
     </tr>
