bibki and bobki

--- a/static/index.html
+++ b/static/index.html
@@ -106,29 +106,45 @@
                     </td>
                 </tr>
             </table>
-    <tr>
-        <table class="result-table" id="result-table">
-            <tr>
-                <th>X</th>
-                <th>Y</th>
-                <th>R</th>
-                <th>Попал?</th>
-                <th>Дата</th>
-                <th>Время</th>
-            </tr>
-            <tbody id="result-tbody">
-            </tbody>
-        </table>
+        </td>
     </tr>
-    <table class="pagination-table">
-        <tr>
-            <td>
-                <input type="button" id="prev-btn" class="pagination-btn disabled" value="Предыдущая" disabled>
-                <input type="button" id="next-btn" class="pagination-btn disabled" value="Следующая" disabled>
-                <input type="button" id="clear-btn" class="pagination-btn disabled" value="Очистить" disabled>
-            </td>
-        </tr>
-    </table>
+    <tr>
+        <td colspan="2">
+            <table class="result-table" id="result-table">
+                <tr>
+                    <th>X</th>
+                    <th>Y</th>
+                    <th>R</th>
+                    <th>Попал?</th>
+                    <th>Дата</th>
+                    <th>Время</th>
+                </tr>
+                <tbody id="result-tbody">
+                <tr>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <table class="pagination-table">
+                <tr>
+                    <td>
+                        <input type="button" id="prev-btn" class="pagination-btn disabled" value="Предыдущая" disabled>
+                        <input type="button" id="next-btn" class="pagination-btn disabled" value="Следующая" disabled>
+                        <input type="button" id="clear-btn" class="pagination-btn disabled" value="Очистить" disabled>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
     <tr>
         <td colspan="2"></td>
     </tr>
